UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/FTRWSAddress__c.object-meta.xml
<CustomObject>
    <description>Custom table to store DPI and DSAT address qualification</description>
    <label>FTRWSAddress</label>
    <nameField>
        <label>FTRWSAddress Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FTRWSAddress</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>