UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Addr_Validation_Result__c.field-meta.xml
<CustomField>
    <fullName>Addr_Validation_Result__c</fullName>
    <formula>IMAGE( CASE(Comments__c, 
&quot;Multiple DPI addresses found, please validate the address manually&quot;, &quot;/resource/yellow&quot;,
&quot;Invalid DPI Address;&quot;, &quot;/resource/red&quot;,
&quot;Invalid DSAT Address;&quot;, &quot;/resource/red&quot;,
&quot;Invalid DPI Address; Invalid DSAT Address;&quot;, &quot;/resource/red&quot;,
&quot;Invalid DSAT ID;&quot;, &quot;/resource/red&quot;,
if(AND(Comments__c==&apos;&apos;, DPI_Qualified__c , DSAT_Qualified__c ),&quot;/resource/green&quot;,&quot;/resource/White&quot;)), &apos;&apos;, 22, 22)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Addr Validation Result</label>
    <type>Text</type>
</CustomField>