UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Concatenated value of street number, street name, city, state and zip.</description>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>