UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Address_Lost_checkbox__c.field-meta.xml
<CustomField>
    <fullName>Address_Lost_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address Lost checkbox</label>
    <type>Checkbox</type>
</CustomField>