UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/AT_T_Date__c.field-meta.xml
<CustomField>
    <fullName>AT_T_Date__c</fullName>
    <label>AT&amp;T Date</label>
    <type>Date</type>
</CustomField>