UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/BDT_Required_checkbox__c.field-meta.xml
<CustomField>
    <fullName>BDT_Required_checkbox__c</fullName>
    <defaultValue>true</defaultValue>
    <label>BDT Required checkbox</label>
    <type>Checkbox</type>
</CustomField>