UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/BSAHttpStatusCode__c.field-meta.xml
<CustomField>
    <fullName>BSAHttpStatusCode__c</fullName>
    <label>BSAHttpStatusCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>