UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Name__c</fullName>
    <label>Business Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>