UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/CIAC_charge__c.field-meta.xml
<CustomField>
    <fullName>CIAC_charge__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CIAC charge</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>