UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/CLLI_Code__c.field-meta.xml
<CustomField>
    <fullName>CLLI_Code__c</fullName>
    <label>CLLI Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>