UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/CO_to_Site_Total_Footage__c.field-meta.xml
<CustomField>
    <fullName>CO_to_Site_Total_Footage__c</fullName>
    <label>CO to Site Total Footage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>