UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Copper_Distance__c.field-meta.xml
<CustomField>
    <fullName>Copper_Distance__c</fullName>
    <label>Copper Distance</label>
    <length>20</length>
    <type>Text</type>
</CustomField>