UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Copper_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Copper_Qualification__c</fullName>
    <label>Copper Qualification</label>
    <length>50</length>
    <type>Text</type>
</CustomField>