UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Copper_Tier__c.field-meta.xml
<CustomField>
    <fullName>Copper_Tier__c</fullName>
    <label>Copper Tier</label>
    <length>5</length>
    <type>Text</type>
</CustomField>