UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <label>County</label>
    <length>15</length>
    <type>Text</type>
</CustomField>