UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <label>DSAT Created By</label>
    <length>250</length>
    <type>Text</type>
</CustomField>