UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Created_By_Id__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Id__c</fullName>
    <label>Created By Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>