UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Customer_DSAT_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_DSAT_ID__c</fullName>
    <label>Customer DSAT ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>