UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Customer_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Customer_Longitude__c</fullName>
    <label>Customer Longitude</label>
    <length>50</length>
    <type>Text</type>
</CustomField>