UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Direct_OSP_Total__c.field-meta.xml
<CustomField>
    <fullName>Direct_OSP_Total__c</fullName>
    <label>Direct OSP Total</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>