UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Direct_Split_Lata_Summary__c.field-meta.xml
<CustomField>
    <fullName>Direct_Split_Lata_Summary__c</fullName>
    <label>Direct Split Lata Summary</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>