UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Direct_TR_Total__c.field-meta.xml
<CustomField>
    <fullName>Direct_TR_Total__c</fullName>
    <label>Direct TR Total</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>