UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/DPI_Qualified__c.field-meta.xml
<CustomField>
    <fullName>DPI_Qualified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true or false depending on whether an address is a qualified DPI address or not</description>
    <label>DPI Qualified</label>
    <type>Checkbox</type>
</CustomField>