UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/DPI_Validated__c.field-meta.xml
<CustomField>
    <fullName>DPI_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true/false based on the address is DPI validated or not</description>
    <label>DPI Validated</label>
    <type>Checkbox</type>
</CustomField>