UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/DSAT_Max_Speed__c.field-meta.xml
<CustomField>
    <fullName>DSAT_Max_Speed__c</fullName>
    <label>DSAT Max Speed</label>
    <length>25</length>
    <type>Text</type>
</CustomField>