UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/DSAT_Qualified__c.field-meta.xml
<CustomField>
    <fullName>DSAT_Qualified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true or false depending on whether an address is a qualified DSAT address or not</description>
    <label>DSAT Qualified</label>
    <type>Checkbox</type>
</CustomField>