UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/DSAT_Services__c.field-meta.xml
<CustomField>
    <fullName>DSAT_Services__c</fullName>
    <description>Stores DSAT products from the DSAT service validation response</description>
    <label>DSAT Services</label>
    <length>250</length>
    <type>Text</type>
</CustomField>