UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/DSAT_Technology__c.field-meta.xml
<CustomField>
    <fullName>DSAT_Technology__c</fullName>
    <label>DSAT Technology</label>
    <length>50</length>
    <type>Text</type>
</CustomField>