UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/DSAT_Tier__c.field-meta.xml
<CustomField>
    <fullName>DSAT_Tier__c</fullName>
    <label>DSAT Tier</label>
    <length>1</length>
    <type>Text</type>
</CustomField>