UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/DSAT_Validated__c.field-meta.xml
<CustomField>
    <fullName>DSAT_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true/false based on the address is DSAT validated or not</description>
    <label>DSAT Validated</label>
    <type>Checkbox</type>
</CustomField>