UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Equipment_Cost__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Cost__c</fullName>
    <label>Equipment Cost</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>