UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Estimated_Build_Time__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Build_Time__c</fullName>
    <label>Estimated Build Time</label>
    <length>15</length>
    <type>Text</type>
</CustomField>