UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/EVC_Bandwidth__c.field-meta.xml
<CustomField>
    <fullName>EVC_Bandwidth__c</fullName>
    <label>EVC Bandwidth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>