UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Fiber_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Fiber_Qualification__c</fullName>
    <label>Fiber Qualification</label>
    <length>50</length>
    <type>Text</type>
</CustomField>