UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Fiber_Tier__c.field-meta.xml
<CustomField>
    <fullName>Fiber_Tier__c</fullName>
    <label>Fiber Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>