UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Future_HBE_WC_Speed__c.field-meta.xml
<CustomField>
    <fullName>Future_HBE_WC_Speed__c</fullName>
    <label>Future HBE WC Speed</label>
    <length>8</length>
    <type>Text</type>
</CustomField>