UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/G_Latitude__c.field-meta.xml
<CustomField>
    <fullName>G_Latitude__c</fullName>
    <label>G Latitude</label>
    <length>50</length>
    <type>Text</type>
</CustomField>