UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/G_Longitude__c.field-meta.xml
<CustomField>
    <fullName>G_Longitude__c</fullName>
    <description>Google longitude for an address</description>
    <label>G Longitude</label>
    <length>50</length>
    <type>Text</type>
</CustomField>