UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/HBE__c.field-meta.xml
<CustomField>
    <fullName>HBE__c</fullName>
    <label>HBE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>