UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/HBE_Legacy__c.field-meta.xml
<CustomField>
    <fullName>HBE_Legacy__c</fullName>
    <description>To identify HBE Eligible or HBE or Legacy.</description>
    <label>Legacy</label>
    <length>40</length>
    <type>Text</type>
</CustomField>