UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/HBE_Max_Qos__c.field-meta.xml
<CustomField>
    <fullName>HBE_Max_Qos__c</fullName>
    <label>HBE Max Qos</label>
    <length>80</length>
    <type>Text</type>
</CustomField>