UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/HBE_Max_Speed__c.field-meta.xml
<CustomField>
    <fullName>HBE_Max_Speed__c</fullName>
    <label>WireCenter Speed (HBE)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>