UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <description>DSAT ID</description>
    <label>DSAT Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>