UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/In_Footprint__c.field-meta.xml
<CustomField>
    <fullName>In_Footprint__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Footprint</label>
    <type>Checkbox</type>
</CustomField>