UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/In_quote__c.field-meta.xml
<CustomField>
    <fullName>In_quote__c</fullName>
    <label>In quote</label>
    <length>10</length>
    <type>Text</type>
</CustomField>