UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Interconnect_Lata__c.field-meta.xml
<CustomField>
    <fullName>Interconnect_Lata__c</fullName>
    <label>Interconnect Lata</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>