UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/IRR_Internal_Rate_of_Return__c.field-meta.xml
<CustomField>
    <fullName>IRR_Internal_Rate_of_Return__c</fullName>
    <label>IRR (Internal Rate of Return)</label>
    <length>14</length>
    <type>Text</type>
</CustomField>