UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <label>Latitude</label>
    <length>50</length>
    <type>Text</type>
</CustomField>