UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Legacy__c.field-meta.xml
<CustomField>
    <fullName>Legacy__c</fullName>
    <description>To identify HBE Eligible or HBE or Legacy.</description>
    <label>Legacy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>