UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/length_feet__c.field-meta.xml
<CustomField>
    <fullName>length_feet__c</fullName>
    <label>length feet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>