UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Level_Id__c.field-meta.xml
<CustomField>
    <fullName>Level_Id__c</fullName>
    <label>Level Id</label>
    <length>1</length>
    <type>Text</type>
</CustomField>