UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Level_Of_Service__c.field-meta.xml
<CustomField>
    <fullName>Level_Of_Service__c</fullName>
    <label>Level Of Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>