UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/link_status__c.field-meta.xml
<CustomField>
    <fullName>link_status__c</fullName>
    <label>link status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>