UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Lit_Building__c.field-meta.xml
<CustomField>
    <fullName>Lit_Building__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lit Building</label>
    <type>Checkbox</type>
</CustomField>