UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <label>Longitude</label>
    <length>50</length>
    <type>Text</type>
</CustomField>