UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/M6_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>M6_Order_Number__c</fullName>
    <label>M6 Order Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>