UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Market_Id__c.field-meta.xml
<CustomField>
    <fullName>Market_Id__c</fullName>
    <label>Market Id</label>
    <length>1</length>
    <type>Text</type>
</CustomField>