UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Max_Qos__c.field-meta.xml
<CustomField>
    <fullName>Max_Qos__c</fullName>
    <label>Max Qos</label>
    <length>80</length>
    <type>Text</type>
</CustomField>