UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Mrc__c.field-meta.xml
<CustomField>
    <fullName>Mrc__c</fullName>
    <label>Mrc</label>
    <length>10</length>
    <type>Text</type>
</CustomField>