UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/MRC_Discount__c.field-meta.xml
<CustomField>
    <fullName>MRC_Discount__c</fullName>
    <label>MRC Discount</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>