UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/MRC_Discount_Type__c.field-meta.xml
<CustomField>
    <fullName>MRC_Discount_Type__c</fullName>
    <label>MRC Discount Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>