UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/MRR_Total1__c.field-meta.xml
<CustomField>
    <fullName>MRR_Total1__c</fullName>
    <label>MRR Total</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>