UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/MRR_total__c.field-meta.xml
<CustomField>
    <fullName>MRR_total__c</fullName>
    <label>MRR total</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>