UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/MTSO_LATA__c.field-meta.xml
<CustomField>
    <fullName>MTSO_LATA__c</fullName>
    <label>MTSO LATA</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>