UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Nearby_HBE_SWC_CLLI__c.field-meta.xml
<CustomField>
    <fullName>Nearby_HBE_SWC_CLLI__c</fullName>
    <label>Nearby HBE SWC CLLI</label>
    <length>16</length>
    <type>Text</type>
</CustomField>