UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Need_by_Date__c.field-meta.xml
<CustomField>
    <fullName>Need_by_Date__c</fullName>
    <label>Need by Date</label>
    <type>Date</type>
</CustomField>