UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/New_Fiber_Build_Footage__c.field-meta.xml
<CustomField>
    <fullName>New_Fiber_Build_Footage__c</fullName>
    <label>New Fiber Build Footage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>