UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/NID_SFP_Costs_10G__c.field-meta.xml
<CustomField>
    <fullName>NID_SFP_Costs_10G__c</fullName>
    <label>NID/SFP Costs &gt;10G</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>