UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/NPV_Net_Present_Value__c.field-meta.xml
<CustomField>
    <fullName>NPV_Net_Present_Value__c</fullName>
    <label>NPV (Net Present Value)</label>
    <length>14</length>
    <type>Text</type>
</CustomField>