UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Nrc__c.field-meta.xml
<CustomField>
    <fullName>Nrc__c</fullName>
    <label>Nrc</label>
    <length>10</length>
    <type>Text</type>
</CustomField>