UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/NRC_Discount__c.field-meta.xml
<CustomField>
    <fullName>NRC_Discount__c</fullName>
    <label>NRC Discount</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>