UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Opened__c.field-meta.xml
<CustomField>
    <fullName>Opened__c</fullName>
    <label>Opened</label>
    <length>50</length>
    <type>Text</type>
</CustomField>