UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Opportunity_ACNA__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ACNA__c</fullName>
    <formula>Opportunity_ID__r.Wholesale_ACNA__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity ACNA</label>
    <type>Text</type>
</CustomField>