UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID__c</fullName>
    <label>Opportunity ID</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Service Addresses</relationshipLabel>
    <relationshipName>ServiceAddress</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>