UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Plan_ID__c.field-meta.xml
<CustomField>
    <fullName>Plan_ID__c</fullName>
    <label>Plan ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>