UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Planned_HBE_Timeframe__c.field-meta.xml
<CustomField>
    <fullName>Planned_HBE_Timeframe__c</fullName>
    <label>Planned HBE Timeframe</label>
    <length>50</length>
    <type>Text</type>
</CustomField>