UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/PNUM__c.field-meta.xml
<CustomField>
    <fullName>PNUM__c</fullName>
    <label>PNUM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>