UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Request_speed__c.field-meta.xml
<CustomField>
    <fullName>Request_speed__c</fullName>
    <label>Request_speed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>