UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Review_Reason__c.field-meta.xml
<CustomField>
    <fullName>Review_Reason__c</fullName>
    <label>Review Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>