UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Review_Status__c</fullName>
    <label>Review Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>