UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Route_Notes__c.field-meta.xml
<CustomField>
    <fullName>Route_Notes__c</fullName>
    <label>Route Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>