UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Servable__c.field-meta.xml
<CustomField>
    <fullName>Servable__c</fullName>
    <label>Servable</label>
    <length>10</length>
    <type>Text</type>
</CustomField>