UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Service_Control_Number__c.field-meta.xml
<CustomField>
    <fullName>Service_Control_Number__c</fullName>
    <label>Service Control Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>