UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_Name__c</fullName>
    <label>Site Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>