UCF-APR2.4/ftr main/force-app/main/default/objects/FTRWSAddress__c/fields/Special_Routing_IO_FAC__c.field-meta.xml
<CustomField>
    <fullName>Special_Routing_IO_FAC__c</fullName>
    <label>Special Routing IO FAC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>D = Route other than normal</fullName>
            </value>
            <value>
                <fullName>E = Self Healing Loop</fullName>
            </value>
            <value>
                <fullName>F = Alternate Wire Center</fullName>
            </value>
            <value>
                <fullName>G = Self Healing Loop via Alternate Wire Center</fullName>
            </value>
            <value>
                <fullName>H = Self Healing Wire Center</fullName>
            </value>
            <value>
                <fullName>J = Self Healing Alternate Wire Center</fullName>
            </value>
            <value>
                <fullName>K = Special Routing at POP/PRILOC</fullName>
            </value>
            <value>
                <fullName>N = N/A</fullName>
            </value>
            <value>
                <fullName>1 = Avoidance</fullName>
            </value>
            <value>
                <fullName>2 = Diversity</fullName>
            </value>
            <value>
                <fullName>3 = Avoidance and Diversity</fullName>
            </value>
            <value>
                <fullName>4 = Self Healing Interoffice Facilities</fullName>
            </value>
            <value>
                <fullName>5 = Special Routing for Interoffice Facilities</fullName>
            </value>
            <value>
                <fullName>6 = Route other than normal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>